[package]
name = "c14_macro_system"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Rust Learning Community"]
description = "C14: Comprehensive Rust Macro System Learning Module"
license = "MIT"
keywords = ["rust", "macros", "metaprogramming", "learning", "tutorial"]
categories = ["development-tools", "education"]

[lib]
name = "c14_macro_system"
path = "src/lib.rs"

[dependencies]
# 工作空间依赖
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = "1.0.103"

# 宏开发辅助
paste = "1.0"

# 示例和测试
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
# 测试依赖
tokio = { workspace = true }
trybuild = "1.0"

[features]
default = []
serde_support = ["serde", "serde_json"]

[[example]]
name = "01_macro_rules_basics"
path = "examples/01_macro_rules_basics.rs"

[[example]]
name = "02_pattern_matching"
path = "examples/02_pattern_matching.rs"

[[example]]
name = "03_repetition"
path = "examples/03_repetition.rs"

[[example]]
name = "04_recursive_macros"
path = "examples/04_recursive_macros.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

