[package]
name = "c14_semantic_web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["Rust 学习项目团队"]
description = "Rust 知识体系知识图谱工具链：解析、验证、推理与查询"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
indexmap = "2.7"

[dev-dependencies]
tempfile = "3.14"

[[example]]
name = "kg_validate"
path = "examples/kg_validate.rs"

[[example]]
name = "kg_query"
path = "examples/kg_query.rs"
