[package]
name = "c14_semantic_web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Rust 知识体系知识图谱工具链：解析、验证、推理与查询"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[example]]
name = "kg_validate"
path = "examples/kg_validate.rs"

[[example]]
name = "kg_query"
path = "examples/kg_query.rs"
