[package]
name = "c14_workflow"
version = "1.89.0"
edition = "2024"
resolver = "3"
authors = ["Rust Workflow Team"]
description = "Advanced workflow system aligned with Rust 1.89 features, international standards, and mature open-source frameworks"
license = "MIT"
repository = "https://github.com/rust-lang/c14_workflow"
keywords = ["workflow", "rust", "patterns", "middleware", "async", "rust189", "temporal", "cadence"]
categories = ["asynchronous", "concurrency", "web-programming", "workflow"]
rust-version = "1.89"

[dependencies]
# 核心依赖 / Core Dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# 异步运行时 / Async Runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# 并发和同步 / Concurrency and Synchronization
parking_lot = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
arc-swap = "1.7.1"
once_cell = "1.21.3"

# 序列化和数据 / Serialization and Data
uuid = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }

# 网络和通信 / Network and Communication
reqwest = { workspace = true, features = ["json", "stream"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }

# 工作流引擎对标 / Workflow Engine Benchmarking
# 对标 Temporal、Cadence 等成熟框架 / Benchmarking against mature frameworks like Temporal, Cadence
# temporal-sdk = { version = "0.1", optional = true }  # 暂时注释，因为该包在 crates.io 上不可用
# cadence = { version = "0.1", optional = true }      # 暂时注释，因为该包在 crates.io 上不可用

# 数据库支持 / Database Support (可选特性)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], default-features = false, optional = true }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"], optional = true }

# 监控和日志 / Monitoring and Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# 配置管理 / Configuration Management
config = { workspace = true }
clap = { version = "4.5.48", features = ["derive", "env"] }

# 测试支持 / Testing Support
[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
proptest = { workspace = true }
mockall = { workspace = true }

[features]
default = ["middleware", "patterns", "rust189", "international_standards"]
full = ["middleware", "patterns", "rust189", "monitoring", "persistence", "database", "international_standards", "framework_benchmarking"]
middleware = []
patterns = []
rust189 = []
monitoring = []
persistence = []
database = ["redis"]
international_standards = []
framework_benchmarking = []  # 暂时移除 temporal-sdk 和 cadence 依赖

# [[bench]]
# name = "workflow_bench"
# harness = false