[package]
name = "c15_blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Rust Blockchain Team"]
description = "区块链应用演示 - 展示 Rust 1.89 特性在区块链开发中的应用"
license = "MIT"
repository = "https://github.com/rust-lang/c15_blockchain"
keywords = ["blockchain", "rust", "cryptocurrency", "consensus"]
categories = ["cryptography", "algorithms", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bincode = "1.3"
sha2 = "0.10"
rand = "0.8"
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Rust 1.89 特性支持
[features]
default = []
ffi = []  # 启用 FFI 功能
advanced = ["ffi"]  # 高级功能

# 开发依赖
[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

# 示例
[[example]]
name = "basic_blockchain"
path = "examples/basic_blockchain.rs"

[[example]]
name = "rust_189_demo"
path = "examples/rust_189_demo.rs"
